--- a/admin/layouts/main.html
+++ b/admin/layouts/main.html
@@ -1,14 +1,17 @@
 <html>
-    <head>
-        <title>{{ yield pageTitle() }}</title>
-        {{ include "./_head.html" }}
-        {{ yield pagePreLoad() }}
-    </head>
-    <body class="has-navbar-fixed-bottom">
-        {{ include "./_header.html" }}
+
+<head>
+    <title>{{ yield pageTitle() }}</title>
+    {{ include "./_head.html" }}
+    {{ yield pagePreLoad() }}
+</head>
+
+<body class="has-navbar-fixed-top has-background-light">
+    {{ include "./_header.html" }}
             {{ yield body() }}
-        {{ include "./_footer.html" }}
-        {{ include "./_foot.html" }}
-        {{ yield pagePostLoad() }}
-    </body>
+    {{ include "./_footer.html" }}
+    {{ include "./_foot.html" }}
+    {{ yield pagePostLoad() }}
+</body>
+
 </html>
