master: page-routes generation

--- a/admin/layouts/main.html
+++ b/admin/layouts/main.html
@@ -4,6 +4,7 @@
     <title>{{ yield pageTitle() }}</title>
     {{ include "./_head.html" }}
     {{ yield pagePreLoad() }}
+    <!-- <meta name="csrf-token" value=""> -->
 </head>
 
 <body class="has-navbar-fixed-top has-background-light">
