master: admin panel updated

--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -13,29 +13,17 @@
 
         <div class="navbar-menu navbar-end">
 
-            <a class="navbar-item">
+            <a class="navbar-item" href="/admin">
                 Home
             </a>
 
-            <a class="navbar-item">
-                Dashboard
+            <a class="navbar-item" href="/admin/pages/list">
+                Pages
             </a>
 
-            <!-- Content Menu-->
-            <div class="navbar-item has-dropdown  ">
-                <a class="navbar-link">
-                    Content
-                </a>
-                <div class="navbar-dropdown">
-                    <!-- User & Settings  -->
-                    <a class="navbar-item">
-                        Pages
-                    </a>
-                    <a class="navbar-item">
-                        Posts
-                    </a>
-                </div>
-            </div>
+            <a class="navbar-item" href="/admin">
+                Posts
+            </a>
 
             <a class="navbar-item">
                 Themes
@@ -71,13 +59,3 @@
     </div>
 </nav>
 
-<div class="container">
-    <nav class="breadcrumb is-small" aria-label="breadcrumbs">
-        <ul>
-            <li><a href="#">Bulma</a></li>
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Components</a></li>
-            <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
-        </ul>
-    </nav>
-</div>
