master: theme selection beautified

--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -21,12 +21,12 @@
                 Pages
             </a>
 
-            <a class="navbar-item" href="/admin">
+            <a class="navbar-item" href="/admin/posts/list">
                 Posts
             </a>
 
-            <a class="navbar-item">
-                Themes
+            <a class="navbar-item" href="/admin/settings">
+                Settings
             </a>
 
             <!-- Adminitstaration Menu -->
