--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -25,6 +25,8 @@
                 Posts
             </a>
 
+            {{ PluginMenu() }}
+
             <a class="navbar-item" href="/admin/settings">
                 Settings
             </a>
