--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -25,7 +25,9 @@
                 Posts
             </a>
 
-            {{ PluginMenu() }}
+            <a class="navbar-item" href="/admin/menus">
+                Menus
+            </a>
 
             <a class="navbar-item" href="/admin/settings">
                 Settings
