master: menu creation - saving not working

--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -25,7 +25,7 @@
                 Posts
             </a>
 
-            <a class="navbar-item" href="/admin/menus">
+            <a class="navbar-item" href="/admin/menus/list">
                 Menus
             </a>
 
