master: assets page added

--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -29,6 +29,10 @@
                 Menus
             </a>
 
+            <a class="navbar-item" href="/admin/assets">
+                Assests
+            </a>
+
             <a class="navbar-item" href="/admin/settings">
                 Settings
             </a>
