master: asset handling updated

--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -29,7 +29,7 @@
                 Menus
             </a>
 
-            <a class="navbar-item" href="/admin/assets">
+            <a class="navbar-item" href="/admin/assets/images">
                 Assests
             </a>
 
