master: site settigs moved to home page | same user middleware applied

--- a/admin/layouts/_header.html
+++ b/admin/layouts/_header.html
@@ -1,1 +1,4 @@
-<navbar></navbar>
+<navbar name="{{.authUser.Values.name }}"
+        id="{{.authUser.Values.id}}"
+        picture="{{.authUser.Values.picture}}"
+></navbar>
