--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -1,3 +1,16 @@
-<nav class="container">
-    <h4>{{ siteTitle() }}</h4>
-</nav>
+<div class="container grid-lg">
+<header class="navbar">
+    <section class="navbar-section">
+        <a href="#" class="btn btn-link">Docs</a>
+        <a href="#" class="btn btn-link">Examples</a>
+    </section>
+    <section class="navbar-center">
+        {{ SiteTitle() }}
+    </section>
+    <section class="navbar-section">
+        <a href="#" class="btn btn-link">Twitter</a>
+        <a href="#" class="btn btn-link">GitHub</a>
+    </section>
+</header>
+<hr>
+</div>
