master: shortshot theme updated

--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -11,7 +11,7 @@
             <section class="navbar-section">
             {{ if Menu("header") != "-"  }}
                 {{ range Menu("header").Items}}
-                <a href="#" class="btn text-light btn-link">{{.Item.Title}}</a>
+                <a href="{{.Item.URL}}" class="btn text-light btn-link">{{.Item.Title}}</a>
                 {{ end }}
             {{ end }}
             </section>
