master: shortshot theme updated

--- a/themes/shortshot/pages/partials/singlePost.html
+++ b/themes/shortshot/pages/partials/singlePost.html
@@ -7,7 +7,7 @@ style="background-image: url('http://127.0.0.1:20196/asset/uploaded/images/socia
 ">
 
     <div class="card-header">
-      <div class="card-title h5"><a href="#" class="text-primary">{{ .PageTitle}} </a></div>
+      <div class="card-title h5"><a href="{{.PageURL}}" class="text-primary">{{ .PageTitle}} </a></div>
       <div class="card-subtitle text-gray">Manish Champaneri</div>
     </div>
     <div class="card-body">
