--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -1,21 +1,17 @@
-<div class="bg-warning text-light"
-    style="box-shadow: 1px "
+<div style="box-shadow: 1px 2px 3px #cfcfcc;"
 >
     <div class="container grid-lg ">
-        <header class="navbar ">
-
+        <header class="navbar" style=" padding:25px 0; ">
             <section class="navbar-section">
                 <h4>{{ SiteTitle() }}</h4>
             </section>
-
             <section class="navbar-section">
             {{ if Menu("header") != "-"  }}
                 {{ range Menu("header").Items}}
-                <a href="{{.Item.URL}}" class="btn text-light btn-link">{{.Item.Title}}</a>
+                <a href="{{.Item.URL}}" class="btn text-dark btn-link">{{.Item.Title}}</a>
                 {{ end }}
             {{ end }}
             </section>
-
         </header>
     </div>
 </div>
