master: theme shortshot updated

--- a/themes/shortshot/pages/partials/singlePost.html
+++ b/themes/shortshot/pages/partials/singlePost.html
@@ -1,33 +1,75 @@
 
 <div class="card"
-style="background-image: url('http://127.0.0.1:20196/asset/uploaded/images/social.png');
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-color: #f7f8f9;
-">
+     style="padding: 0.3rem;
+    box-shadow: 2px 2px 5px rgba(50, 50, 50,0.2);
 
-    <div class="card-header">
-      <div class="card-title h5"><a href="{{.PageURL}}" class="text-primary">{{ .PageTitle}} </a></div>
-      <div class="card-subtitle text-gray">Manish Champaneri</div>
+     background : none;
+    /* background-image: url('http://127.0.0.1:20196/asset/uploaded/images/social.png'); */
+    /* background-size: 300px 150px; */
+    /* background-position: 95% 42%; */
+    /* backdrop-filter: alpha(opacity=50); */
+    /* background-repeat: no-repeat; */
+    /* background-color: #f7f8f9; */
+    max-height: 400px;
+    min-height: 250px;
+    "
+>
+<!--
+ -->
+
+
+    <div class="card-header"  >
+
+
+
+      <div class="card-title h4 " style="margin-bottom:1rem ;position: relative;">
+        <a href="{{.PageURL}}" class="text-dark">{{ .PageTitle}} </a>
+        <img src="https://3.bp.blogspot.com/-mb7DiJ-mysA/W0dX9ikwuTI/AAAAAAAAFig/19Dd5AxW5rMLtRiSOGt7ZN4AMWNDICTVgCLcBGAs/w128-h128-p-k-no-nu/go-sciter-calc-banner.png" alt=""
+        style="position: absolute;
+        z-index: -1;
+        right: 0;
+        top: 100%;
+        opacity: 0.1;
+        transform: rotate3d(1, 6, 3, -20deg);
+        box-shadow: 8px 10px 20px rgb(50, 50, 50)
+        "
+        height="150" width="300"
+    >
     </div>
-    <div class="card-body">
+      <div class="card-subtitle text-dark" style="margin-bottom: 0.2rem">
+        <div class="d-inline-block">
+        <a href="#">
+          <figure class="avatar avatar-md">
+            <img src="https://4.bp.blogspot.com/-ySkDGR_J1rg/XKWYAIu8Y8I/AAAAAAAAGzg/GD_1wpygnT8g3s5R1p7kntL7wWruLRCKgCK4BGAYYCw/s120-pf/profile_pic.jpg" alt="...">
+          </figure>
+          <div style="line-height: 32px" class="d-inline-block">  Manish Champaneri
+          </div>
+            </a>
+        </div>
+      </div>
+      <div>
+      {{if .Tag1}}
+      <span class="chip">
+          {{.Tag1}}
+      </span>
+      {{ end }}
+      {{if .Tag2}}
+      <span class="chip">
+          {{.Tag2}}
+      </span>
+      {{ end }}
+      {{if .Tag3}}
+      <span class="chip">
+          {{.Tag3}}
+      </span>
+      {{ end }}
+      </div>
+    </div>
+    <div class="card-body text-justify" style="margin-bottom: 0.2rem ">
         {{ .Content.Desc }}
-    </div>
-    <div class="card-footer">
-        {{if .Tag1}}
-        <span class="chip">
-            {{.Tag1}}
-        </span>
-        {{ end }}
-        {{if .Tag2}}
-        <span class="chip">
-            {{.Tag2}}
-        </span>
-        {{ end }}
-        {{if .Tag3}}
-        <span class="chip">
-            {{.Tag3}}
-        </span>
-        {{ end }}
+
+        <div style="margin-top:1rem">
+                <a href="#"> Read more <i class="fa fa-chevron-right" style="font-size:12px;"></i></a>
+            </div>
     </div>
   </div>
