--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -1,5 +1,4 @@
-<div style="box-shadow: 1px 2px 3px #cfcfcc;"
->
+<div>
     <div class="container grid-lg ">
         <header class="navbar" style=" padding:25px 0; ">
             <section class="navbar-section">
