master: theme updated

--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -1,16 +1,30 @@
-<div>
+<div style="position: fixed; width:100%; top:0; left:0;; z-index:4; background: #333;">
     <div class="container grid-lg ">
-        <header class="navbar" style=" padding:25px 0; ">
+        <header class="navbar" style=" padding:20px 0; ">
+           
+                <section class="navbar-section">
+                        <h4 class="text-light">{{ SiteTitle() }}</h4>
+                    </section>
+                <section class="navbar-section">
+                        <!-- <h4 style=" background: #ccc; padding: 5px ;;">{{ SiteTitle() }}</h4> -->
+                        {{ if Menu("header") != "-"  }}
+                            {{ range Menu("header").Items}}
+                            <h4>
+                                <a class="btn text-light btn-link" href="{{.Item.URL}}">
+                                    {{.Item.Title}}
+                                </a>
+                            </h4>
+                            {{ end }}
+                        {{ end }}
+                        </section>
+           
+           
+           
             <section class="navbar-section">
-                <h4>{{ SiteTitle() }}</h4>
             </section>
-            <section class="navbar-section">
-            {{ if Menu("header") != "-"  }}
-                {{ range Menu("header").Items}}
-                <a href="{{.Item.URL}}" class="btn text-dark btn-link">{{.Item.Title}}</a>
-                {{ end }}
-            {{ end }}
-            </section>
+
+          
         </header>
     </div>
 </div>
+<div style="padding: 60px; content:' ';"></div>
