master: theme updated

--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -3,7 +3,7 @@
         <header class="navbar" style=" padding:20px 0; ">
            
                 <section class="navbar-section">
-                        <h4 class="text-light">{{ SiteTitle() }}</h4>
+                       <a href="/"> <h4 class="text-light">{{ SiteTitle() }}</h4> </a>
                     </section>
                 <section class="navbar-section">
                         <!-- <h4 style=" background: #ccc; padding: 5px ;;">{{ SiteTitle() }}</h4> -->
