--- a/themes/shortshot/pages/partials/singlePost.html
+++ b/themes/shortshot/pages/partials/singlePost.html
@@ -24,7 +24,7 @@
      
       <div class="card-title h4 " style="margin-bottom:1rem ;position: relative;">
         <a href="{{.PageURL}}" class="text-dark">{{ .PageTitle}} </a>
-        <img src="https://3.bp.blogspot.com/-mb7DiJ-mysA/W0dX9ikwuTI/AAAAAAAAFig/19Dd5AxW5rMLtRiSOGt7ZN4AMWNDICTVgCLcBGAs/w128-h128-p-k-no-nu/go-sciter-calc-banner.png" alt=""
+        <img src="{{ .PageThumb}}" alt=""
         style="position: absolute;
         z-index: -1;
         right: 0;
@@ -45,7 +45,7 @@
           </figure>   
           <span> 
               <b>{{ .MarchUserObj.Name }}</b>
-              <i>{{ .MarchUserObj.Email }} </i>
+            
             </span>
 
         </div>
