--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -1,4 +1,14 @@
-<div style="position: fixed; width:100%; top:0; left:0;; z-index:4; background: #333;">
+<link href="https://fonts.googleapis.com/css?family=Cousine|Crimson+Text&amp;display=swap" rel="stylesheet">
+<style>
+   .text-light{
+          color: rgb(45, 43, 87) !important
+        }
+    p{
+        font-family: "Crimson Text", serif;
+    }
+</style>
+
+<div style="position: fixed; width:100%; top:0; left:0;; z-index:4; background: #fff; border-bottom:1px solid #c6c6c6;">
     <div class="container grid-lg ">
        <div class="columns">
            
