--- a/themes/shortshot/pages/partials/navbar.html
+++ b/themes/shortshot/pages/partials/navbar.html
@@ -1,3 +1,14 @@
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-71252860-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-71252860-10');
+</script>
+
+
 <link href="https://fonts.googleapis.com/css?family=Cousine|Crimson+Text&amp;display=swap" rel="stylesheet">
 <style>
    .text-light{
@@ -11,9 +22,9 @@
 <div style="position: fixed; width:100%; top:0; left:0;; z-index:4; background: #fff; border-bottom:1px solid #c6c6c6;">
     <div class="container grid-lg ">
        <div class="columns">
-           
+
                 <section class="col-3 col-md-12 "">
-                       <a href="/"> <h4 class="text-light text-center hide-md" 
+                       <a href="/"> <h4 class="text-light text-center hide-md"
                         style="margin:1.2rem"
                         >{{ SiteTitle() }}</h4> </a>
                     </section>
@@ -31,8 +42,8 @@
                         {{ end }}
                         </section>
                     </ul>
-           
-   
+
+
         </div>
     </div>
 </div>
